--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <input type="radio" name="photos" id="check4">
     <div class="container">
         <h1>Monia Illustration Gallery</h1>
-        <div class="top-content">
+        <!-- <div class="top-content">
             <h3>Gallery</h3>
             <label for="check1">All</label>
             <label for="check2">Landscapes</label>
             <label for="check3">Logos</label>
             <label for="check4">Others</label>
-        </div>
+        </div> -->
     </div>
 
     <div class="gallery">
@@ -64,6 +64,11 @@
         </div>
     </div>
 
+    <div class="popup-image">
+        <span>&times;</span>
+        <img src="images/07.svg" alt="">
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
