--- a/index.html
+++ b/index.html
@@ -19,48 +19,49 @@
     <input type="radio" name="photos" id="check4">
     <div class="container">
         <h1>Monia Illustration Gallery</h1>
-        <!-- <div class="top-content">
+        <div class="top-content">
             <h3>Gallery</h3>
             <label for="check1">All</label>
             <label for="check2">Landscapes</label>
             <label for="check3">Logos</label>
             <label for="check4">Others</label>
-        </div> -->
-    </div>
+        </div>
 
-    <div class="gallery">
-        <div class="pic logo">
-            <img src="images/01.svg" alt="">
-        </div>
-        <div class="pic other">
-            <img src="images/02.svg" alt="">
-        </div>
-        <div class="pic other">
-            <img src="images/03.svg" alt="">
-        </div>
-        <div class="pic other">
-            <img src="images/04.svg" alt="">
-        </div>
-        <div class="pic other">
-            <img src="images/05.svg" alt="">
-        </div>
-        <div class="pic other">
-            <img src="images/06.svg" alt="">
-        </div>
-        <div class="pic other">
-            <img src="images/07.svg" alt="">
-        </div>
-        <div class="pic landscape">
-            <img src="images/08.svg" alt="">
-        </div>
-        <div class="pic other">
-            <img src="images/09.svg" alt="">
-        </div>
-        <div class="pic landscape">
-            <img src="images/10.svg" alt="">
-        </div>
-        <div class="pic landscape">
-            <img src="images/11.svg" alt="">
+
+        <div class="gallery">
+            <div class="pic logo">
+                <img src="images/01.svg" alt="">
+            </div>
+            <div class="pic other">
+                <img src="images/02.svg" alt="">
+            </div>
+            <div class="pic other">
+                <img src="images/03.svg" alt="">
+            </div>
+            <div class="pic other">
+                <img src="images/04.svg" alt="">
+            </div>
+            <div class="pic other">
+                <img src="images/05.svg" alt="">
+            </div>
+            <div class="pic other">
+                <img src="images/06.svg" alt="">
+            </div>
+            <div class="pic landscape">
+                <img src="images/07.svg" alt="">
+            </div>
+            <div class="pic other">
+                <img src="images/08.svg" alt="">
+            </div>
+            <div class="pic landscape">
+                <img src="images/09.svg" alt="">
+            </div>
+            <div class="pic landscape">
+                <img src="images/10.svg" alt="">
+            </div>
+            <div class="pic landscape">
+                <img src="images/11.svg" alt="">
+            </div>
         </div>
     </div>
 
