--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input type="radio" name="photos" id="check3">
     <input type="radio" name="photos" id="check4">
     <div class="container">
-        <h1>Monia Illustration Gallery</h1>
+        <h1>Monia Illustrations Gallery</h1>
         <div class="top-content">
             <h3>Gallery</h3>
             <label for="check1">All</label>
@@ -67,7 +67,7 @@
 
     <div class="popup-image">
         <span>&times;</span>
-        <img src="images/07.svg" alt="">
+        <img class="big-img" src="" alt="">
     </div>
     <script src="app.js"></script>
 </body>
